--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,8 @@ body:before {
     color: #707070;
 }
 
+
+
 @media(min-width:75rem) {
     body:before {
         height: 800px;
@@ -79,6 +81,13 @@ body:before {
 
     .meal_box-forwrite h2 {
         margin-bottom: 10px;
+    }
+}
+
+@media (min-width:48rem) and (max-width:75rem) {
+    .reverse {
+        display: flex !important;
+        flex-direction: row-reverse;
     }
 }
 
